fix: display input at the bottom on mobile

--- a/internal/ui/static/css/styles.css
+++ b/internal/ui/static/css/styles.css
@@ -572,11 +572,11 @@ a:active, button:active, .message-content:active {
     }
     @supports (padding-bottom: env(safe-area-inset-bottom)) {
         .message-input {
-            bottom: calc(120px + env(safe-area-inset-bottom));
+            bottom: calc(env(safe-area-inset-bottom));
         }
         .message-history {
-            height: calc(100vh - 120px - env(safe-area-inset-bottom));
-            padding-bottom: calc(180px + env(safe-area-inset-bottom));
+            height: calc(100vh - env(safe-area-inset-bottom));
+            padding-bottom: calc(60px + env(safe-area-inset-bottom));
         }
     }
 }
